removed demo code from index

--- a/index.html
+++ b/index.html
@@ -9,23 +9,13 @@
   <body>
     <div class="grid container">
       <div class="cs1 ce12">
-        <img src="/src/assets/welcome.png" alt="" />
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/58/Reddit_logo_new.svg/2560px-Reddit_logo_new.svg.png" alt="" />
       </div>
       <div class="cs1 ce12">
-        <h1>Great, your app is running locally</h1>
+        <h1>Reddit Search for Miro</h1>
         <p>
-          You can now create your Developer team to get your app running in
-          Miro.
+          Load this app in Miro and let's get started! 
         </p>
-      </div>
-      <div class="cs1 ce12">
-        <a
-          class="button button-primary"
-          href="https://developers.miro.com/docs/build-your-first-hello-world-app#step-2-create-a-developer-team-in-miro"
-          target="_blank"
-        >
-          Create a Developer team
-        </a>
       </div>
     </div>
     <script type="module" src="/src/index.ts"></script>
